Fix a typo in pyrightconfig.json

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -2,7 +2,7 @@
     "pythonVersion": "3.9",
     "typeCheckingMode": "strict",
     "reportWildcardImportFromLibrary": "none",
-    "reportMissingTypeStubs": "warning"
+    "reportMissingTypeStubs": "warning",
     "reportUnusedImport": "none",
     "reportUnusedClass": "none",
     "reportUnusedFunction": "none",
