--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,10 +1,15 @@
 {
-    "pythonVersion": "3.9",
+    "pythonVersion": "3.10",
+    "pythonPlatform": "Linux",
     "typeCheckingMode": "strict",
+    "useLibraryCodeForTypes": true,
     "reportWildcardImportFromLibrary": "none",
     "reportMissingTypeStubs": "warning",
-    "reportUnusedImport": "none",
+    "reportUnusedImport": "warning",
+    "reportUnusedVariable": "warning",
     "reportUnusedClass": "none",
     "reportUnusedFunction": "none",
-    "reportUnusedVariable": "none"
+    "reportPrivateUsage": "warning",
+    "reportConstantRedefinition": "none",
+    "reportUnknownLambdaType": "warning"
 }
