--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -3,12 +3,13 @@
     "pythonPlatform": "Linux",
     "typeCheckingMode": "strict",
     "useLibraryCodeForTypes": true,
-    "reportWildcardImportFromLibrary": "warning",
-    "reportMissingTypeStubs": "warning",
+    "reportWildcardImportFromLibrary": "none",
+    "reportMissingTypeStubs": "none",
     "reportUnusedImport": "warning",
     "reportUnusedVariable": "warning",
     "reportUnusedClass": "none",
     "reportUnusedFunction": "none",
+    "reportUnusedExpression": "none",
     "reportPrivateUsage": "warning",
     "reportConstantRedefinition": "none",
     "reportUnknownLambdaType": "warning"
